--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,7 +156,7 @@ li {
     padding: 16px;
     margin-bottom: 24px;
     display: flex;
-    align-items: end;
+    align-items: flex-start;
 
     background: white;
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
